# LingoSub

./: .gitignore  PROCESS.md  README.md  kung.fu.dunk.2008.dvdrip.xvid-bien.srt  项目目录结构总览.md
.claude/tasks/: 01-project-setup.md  02-python-engines.md  03-rust-backend.md  04-frontend-ui.md  05-netflix-processor.md  README.md  WAKEUP.md
LingoSub-cli/: .eslintrc.json  .prettierignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
LingoSub-cli/src/: App.tsx  index.css
LingoSub-cli/src-tauri/: Cargo.toml  tauri.conf.json
LingoSub-cli/src-tauri/src/: main.rs
docs/: faster-whisper.md  funasr.md  视频自动字幕生成客户端设计_.md  需求文档.md
docs/api/: authentication.md  protocol.md  types.md
docs/architecture/: ARCHITECTURAL_DECISIONS.md  sequence_diagram.md
docs/server/: FunASR 与 Faster Whisper 核心运行机制比较.md  开发文档 v0.1：桌面端字幕工具（FunASR _ faster-whisper 双引擎）.md
issues/: ENGINE-001.md  SETUP-002.md  SETUP-003.md  SETUP-004.md  SETUP-005.md
lingosub-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  requirements.txt  testapi.py
lingosub-server/app/: main.py
lingosub-server/docs/: api-specs.md
python-engines/: README.md  __init__.py  requirements.txt  test_final_check.py  test_integration.py  test_quick_exit.py  test_simple.py
python-engines/common/: README.md  __init__.py  base_engine.py  communication.py  config.py  lifecycle.py  logger.py  models.py  test_engine.py
python-engines/funasr_engine/: README.md
scripts/: README.md
tests/: README.md
tests/unit/: test_base_engine.py  (+1 more)
(+19 files in other folders)
